# examples/axum-example/openapi.json
@@ -453,16 +453,55 @@
         "operationId": "mod_file_with_map_query",
         "parameters": [
           {
-            "name": "_query",
+            "name": "name",
             "in": "query",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {},
-              "required": [],
-              "additionalProperties": {
-                "type": "string"
+              "type": "string"
+            }
+          },
+          {
+            "name": "age",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "optional_age",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "nullable": true
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
               }
+            }
+          }
+        }
+      }
+    },
+    "/no-schema-query": {
+      "get": {
+        "operationId": "mod_file_with_no_schema_query",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "object"
             }
           }
         ],
@@ -566,11 +605,19 @@
         "operationId": "mod_file_with_struct_query",
         "parameters": [
           {
-            "name": "query",
+            "name": "name",
             "in": "query",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/StructQuery"
+              "type": "string"
+            }
+          },
+          {
+            "name": "age",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
             }
           }
         ],
@@ -593,11 +640,19 @@
         "operationId": "mod_file_with_test_struct",
         "parameters": [
           {
-            "name": "query",
+            "name": "name",
             "in": "query",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/TestStruct"
+              "type": "string"
+            }
+          },
+          {
+            "name": "age",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
             }
           }
         ],
@@ -1174,6 +1229,25 @@
           "value",
           "name",
           "value2"
+        ]
+      },
+      "MapQuery": {
+        "type": "object",
+        "properties": {
+          "age": {
+            "type": "integer"
+          },
+          "name": {
+            "type": "string"
+          },
+          "optional_age": {
+            "type": "integer",
+            "nullable": true
+          }
+        },
+        "required": [
+          "name",
+          "age"
         ]
       },
       "SignupRequest": {
