# examples/axum-example/src/routes/mod.rs
@@ -27,10 +27,31 @@ pub async fn mod_file_endpoint() -> &'static str {
     "mod file endpoint"
 }
 
+#[derive(Deserialize, Schema, Debug)]
+pub struct MapQuery {
+    pub name: String,
+    pub age: u32,
+    pub optional_age: Option<u32>,
+}
 #[vespera::route(get, path = "/map-query")]
-pub async fn mod_file_with_map_query(
-    Query(_query): Query<HashMap<String, String>>,
-) -> &'static str {
+pub async fn mod_file_with_map_query(Query(query): Query<MapQuery>) -> &'static str {
+    println!("map query: {:?}", query.age);
+    println!("map query: {:?}", query.name);
+    println!("map query: {:?}", query.optional_age);
+    "mod file endpoint"
+}
+
+#[derive(Deserialize, Debug)]
+pub struct NoSchemaQuery {
+    pub name: String,
+    pub age: u32,
+    pub optional_age: Option<u32>,
+}
+#[vespera::route(get, path = "/no-schema-query")]
+pub async fn mod_file_with_no_schema_query(Query(query): Query<NoSchemaQuery>) -> &'static str {
+    println!("no schema query: {:?}", query.age);
+    println!("no schema query: {:?}", query.name);
+    println!("no schema query: {:?}", query.optional_age);
     "mod file endpoint"
 }
 
